--- a/scripts/projects.json
+++ b/scripts/projects.json
@@ -6,13 +6,13 @@
          "The app was made using the React.js library with minor CSS. The data is rendered asynchronously."
         ],
 	 "imgs":[
-		{"src":"media/streetfighterapp_characterlist.jpg",
+		{"src":"media/streetfighterapp_characterlist.png",
 		 "alt":"The project features the original eight playable characters from the 1991 game Street Fighter II."},
 		{"src":"media/streetfighterapp_charactersearch.png",
 		 "alt":"The app is initiated using a search function to find the characters."},
-        {"src":"media/streetfighterapp_chunlipage.jpg",
+        {"src":"media/streetfighterapp_chunlipage.png",
          "alt":"Each character has a page that features various stats and information including their speed and power levels and their winning tagline."},
-        {"src": "media/streetfighterapp_dhalsimpage.jpg",
+        {"src": "media/streetfighterapp_dhalsimpage.png",
          "alt":"Each character page also features a section showing the character's special moves and how they can be executed."}
          ],
 	 "link_description":"Click here to view the code, or download it and try it for yourself.",
